# StatLab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  statistics.hh  utils.hh
include/: arithmetic_traits.hpp  arithmetics.hpp  compare.hpp  concepts.hpp  statistics.hh  statistics.hpp  statlab.hpp  test_utils.hh  utilities.hpp  utils.hh  utils.hpp
test/: CMakeLists.txt  algorithms_test.cpp  description.csv  make_descr.py  normal.csv  normal_0_1_data.csv  pandas_descr.csv  sample.cpp  statistics_test.cc  statistics_test.cpp  uniform.csv
